# logic-gates

./: README.md
logic_sim/: CMakeLists.txt
logic_sim/include/: Circuit.h  FileManager.h  Gate.h  Gates.h  Simulator.h  TruthTable.h  Wire.h
logic_sim/src/: Circuit.cpp  FileManager.cpp  Gate.cpp  Gates.cpp  TruthTable.cpp  main.cpp  test_core.cpp
